2000-07-24  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* scheduler/msgerror.c:
	    A simple spelling error in normally invisible text sent
	    towards the user inside the delivery status reports.

2000-07-18  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* transports/smtp/smtp.c:
	    Possibly  ssfgets()  fell on over-by-one allocation/storage
	    error so that the buffer tail got stomped over, and some
	    systems didn't like it --> they crashed.

	* configure.in, router/db.c, router/libdb/bsdbtree.c,
	  router/libdb/bsdhash.c, smtpserver/policytest.h,
	  smtpserver/policytest.c, utils/makedb/makedb.c,
	  utils/makedb/dblook.c, utils/vacation/vacation.c,
	  README.UPGRADING:
	    Reworked things to support another kind of set of
	    SleepyCat DB libraries.  Not yet covering version 3.x.

	* lib/rfc822scan.c:
	    A bit more characters into "no need to quote these here"
	    set -- allow address <@[1.2.3.4]:foo@bar> and <foo@[1.2.3.4]>

2000-07-17  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* libs/Makefile.in, Makefile.in:
	    Merge  libsfio.a  generation into this file also, so that
	    there is no absolute need to run its make as the first
	    thing among subdirs.
	    Also made top-level "make libs" target which recompiles
	    and/or just reconstructs (with ar) all libraries.

	* transports/smtp/smtp.c:
	    Oops.. Solaris 2.6 --with-bundled-libresolv  does not
	    know about BIND 8 resolver's AD and CD bits.  Don't use
	    them.

	* Makefile.in:
	    Version 2.99.53

	* smtpserver/smtpcmds.c:
	    At MAIL FROM policy reporting we did always yield
	    400-series reply even when actual code directed us
	    to yield 500-series..

2000-07-14  Grace He <ghe@scs.Ryerson.CA>

	* router/dateparse.c:
	    Fix for "Date: 00-06-29 03:50:11" induced crashes

2000-07-14  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* lib/selfaddrs.c:
	    Rearrange SIOCGLIFCONF / SIOCGIFCONF code a bit, will